# autora-theorist-example-theorist

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/krish_theorist/: __init__.py
tests/: test_krish_theorist.py
